# Wolf-Rayets

./: .gitignore  1dsmoothhist.py  2DHistGradientTest.py  2DHistNumpyTest.py  2DHistSimpleTests.py  Apep_Emcee.ipynb  Apep_GUI.py  Apep_HMC.py  Apep_HMC_HPC.py  Apep_HMC_HPC.sh  Apep_HMC_HPC_Cavity.py  Apep_HMC_HPC_Cavity.sh  Apep_HMC_HPC_Simulated.sh  Apep_HMC_HPC_Simulated_Cavity.sh  Apep_HMC_Simulated_HPC.py  Apep_HMC_Simulated_HPC_Cavity.py  Apep_HPC_Plot.py  DWT.py  Data_Gradient_Tests.py  Expansion_Rate_and_Period-Simulated.ipynb  Expansion_Rate_and_Period.ipynb  Plots_File.py  README.md  UVflux.py  Untitled.ipynb  Untitled1.ipynb  WR_GM_GUI.py  WR_GM_MCMC.py  WR_GM_MCMC_Blackjax.py  WR_GM_MCMC_Blackjax_HPC.py  WR_GM_MCMC_Blackjax_read_HPC.py  WR_GM_MCMC_emcee_data.py  WR_GM_NS.py  WR_GM_SVI.py  WR_Geom_Model.py  WR_binaries.py  getafix_instructions.txt  loglike_singlepixelgif.py  loglikegif.py  model.py  (+9 more)
.ipynb_checkpoints/: Apep_Emcee-checkpoint.ipynb  Expansion_Rate_and_Period-Simulated-checkpoint.ipynb  Expansion_Rate_and_Period-checkpoint.ipynb  Shell_Geometry_Compare-checkpoint.ipynb  Shell_Temp_Attemp-checkpoint.ipynb
Data/: Apep_J8.9_2016.fits  Apep_J8.9_2017.fits  Apep_J8.9_2018.fits  Apep_J8.9_2024.fits
HMC_Testing/: Apep_HMC_HPC.sh  Apep_HMC_HPC_Cavity.sh  Apep_HMC_Simulated_HPC_Cavity.py  Error testing.ipynb  WR_GM_MCMC_emcee_data.py  WR_GM_MCMC_emcee_simulated.py  test_hmc.py
HPC/: readme.md
Histogram_Tests/: 2DHistGradientTest.py
deprecated/: DWT_loglike.py  Digraph.gv  WR_GM_MCMC_Blackjax.py  WR_GM_MCMC_Blackjax_HPC.py  WR_GM_NC_Numpyro.py  (+1 more)
(+57 files in other folders)
